Fixed overlapping img on Safari

--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -19,7 +19,7 @@
 }
 
 .login-title-img {
-  height: 100%;
+  height: 70px;
 }
 
 .login-box {
